--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap');
+
 :root {
     --success-50: #f5faeb;
     --success-100: #e8f2d5;
@@ -75,6 +77,9 @@
 body {
     margin: 0;
     padding: 0;
+
+    font-family: 'Noto Sans', sans-serif;
+    letter-spacing: 1px;
 }
 
 div.app {
