--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -88,6 +88,23 @@ div.app {
 
 .menu-button {
     visibility: collapse;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.menu-button:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+main > .menu-button {
+    margin: 1em;
+    align-self: flex-start;
 }
 
 @media (max-width: 900px) {
@@ -97,10 +114,5 @@ div.app {
         padding: 0.5em;
         margin-right: -1em;
         border-radius: 50%;
-    }
-
-    .menu-button:hover {
-        cursor: pointer;
-        background-color: rgba(0, 0, 0, 0.5);
     }
 }
